[package]
name = "gxccd"
version = "0.1.1"
edition = "2021"
description = "Rust wrapper around gxccd C library"
license = "MIT"
authors = ["Jesse Cranney <jesse.cranney@anu.edu.au>"]
readme = "README.md"
repository = "https://github.com/jcranney/gxccd-wrap"

[package.metadata]
include = ["lib/*"]

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
fitrs = "0.5.0"
libc = "0.2.158"
